fix auth error