@@ -4,14 +4,12 @@ import com.example.PosSystemMart.DTO.CategoryRequest;
 import com.example.PosSystemMart.DTO.CategoryResponse;
 import com.example.PosSystemMart.Mapper.CategoryMapper;
 import com.example.PosSystemMart.Model.CategoryModel;
-import com.example.PosSystemMart.Repository.BrandRepository;
 import com.example.PosSystemMart.Repository.CategoryRepository;
 import com.example.PosSystemMart.Service.CategoryService;
-import org.hibernate.annotations.Audited;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class CategoryServicelmpl implements CategoryService {
@@ -33,33 +31,41 @@ public class CategoryServicelmpl implements CategoryService {
     }
 
     @Override
-    public CategoryResponse updateCategory(Long id,CategoryRequest request){
-        CategoryModel existingCategory = categoryRepository.findById(id).orElseThrow(() -> new IllegalArgumentException("Category with id " + id + " does not exists."));
-        if (categoryRepository.existsByCategoryName(request.getCategoryName())) {
+    public CategoryResponse updateCategory(Long id, CategoryRequest request){
+        CategoryModel existingCategory = categoryRepository.findById(id)
+                .orElseThrow(() -> new IllegalArgumentException("Category with id " + id + " does not exist."));
+        
+        if (!existingCategory.getCategoryName().equalsIgnoreCase(request.getCategoryName()) && 
+            categoryRepository.existsByCategoryName(request.getCategoryName())) {
             throw new IllegalArgumentException("Category with name " + request.getCategoryName() + " already exists.");
         }
+        
         existingCategory.setCategoryName(request.getCategoryName());
         existingCategory.setCategoryDescription(request.getCategoryDescription());
         categoryRepository.save(existingCategory);
         return CategoryMapper.toResponse(existingCategory);
-
     }
 
     @Override
     public List<CategoryResponse> getAllCategory(){
         List<CategoryModel> categoryList = categoryRepository.findAll();
-        return categoryList.stream().map(CategoryMapper::toResponse).collect(Collectors.toList());
+        return categoryList.stream()
+                .map(CategoryMapper::toResponse)
+                .toList();
     }
+
     @Override
     public CategoryResponse getCategoryByID (Long id){
-        CategoryModel category = categoryRepository.findById(id).orElseThrow(() -> new IllegalArgumentException("Category with id " + id + " does not exists."));
+        CategoryModel category = categoryRepository.findById(id)
+                .orElseThrow(() -> new IllegalArgumentException("Category with id " + id + " does not exist."));
         return CategoryMapper.toResponse(category);
     }
 
     @Override
     public CategoryResponse deleteCategory(Long id){
-        categoryRepository.deleteById(id);
+        CategoryModel category = categoryRepository.findById(id)
+                .orElseThrow(() -> new IllegalArgumentException("Category with id " + id + " does not exist."));
+        categoryRepository.delete(category);
         return null;
     }
-
 }
